crates/swc_ecma_parser/tests/test262-error-references/fail/939b16a89d0e8704.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/939b16a89d0e8704.js:1:15
  |
1 | "use strict"; ({ v: arguments }) = obj
  |               ^^^^^^^^^^^^^^^^^^

